# webtools-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  faqGenerator.py  generate_structured_output.py  index.py  init_alembic.py  main.py  pyproject.toml  read_github_content.py  seed_db.py  seed_faqs.py
alembic/: env.py
alembic/versions/: 2077e20427f3_description_of_changes.py  729a2c68452e_summaries_and_authors.py
web_tools/: config.py  models.py
web_tools/api/: deps.py
web_tools/api/endpoints/: fag_router.py  summary_router.py  user_router.py
web_tools/core/: database_session.py
web_tools/faq/: generation.py  models.py  prompts.py  repositories.py  services.py
web_tools/summaries/: models.py  prompts.py  summaries.py
web_tools/utils/: github_utils.py  text_utils.py
